Managed/AHI/Internal/Generated/AhiNativeGenerated.g.cs

// Auto-generated by csharp-binding-generator. Do not edit by hand.
using System;
using System.Runtime.InteropServices;

namespace Luna.AHI.Internal;

internal static partial class AhiNativeGenerated
{
    [DllImport("LunaAHIC", EntryPoint = "luna_ahi_init_module", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr InitModule();

    [DllImport("LunaAHIC", EntryPoint = "luna_ahi_free_string", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void FreeString(IntPtr text);

    [DllImport("LunaAHIC", EntryPoint = "luna_ahi_get_adapters", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr GetAdapters(IntPtr outPlaybackAdapters, ulong playbackCapacity, out ulong outPlaybackCount, IntPtr outCaptureAdapters, ulong captureCapacity, out ulong outCaptureCount);

    [DllImport("LunaAHIC", EntryPoint = "luna_ahi_iadapter_get_name", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IadapterGetName(IntPtr self, out IntPtr outName);

    [DllImport("LunaAHIC", EntryPoint = "luna_ahi_iadapter_is_primary", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int IadapterIsPrimary(IntPtr self);

    [DllImport("LunaAHIC", EntryPoint = "luna_ahi_iadapter_get_native_wave_formats", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IadapterGetNativeWaveFormats(IntPtr self, IntPtr outFormats, ulong capacity, out ulong outCount);

    [DllImport("LunaAHIC", EntryPoint = "luna_ahi_new_device", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr NewDevice(in NativeDeviceDesc desc, out NativeDeviceHandle outDevice);

    [DllImport("LunaAHIC", EntryPoint = "luna_ahi_idevice_get_sample_rate", CallingConvention = CallingConvention.Cdecl)]
    internal static extern uint IdeviceGetSampleRate(IntPtr self);

    [DllImport("LunaAHIC", EntryPoint = "luna_ahi_idevice_get_flags", CallingConvention = CallingConvention.Cdecl)]
    internal static extern uint IdeviceGetFlags(IntPtr self);

    [DllImport("LunaAHIC", EntryPoint = "luna_ahi_idevice_get_playback_num_channels", CallingConvention = CallingConvention.Cdecl)]
    internal static extern uint IdeviceGetPlaybackNumChannels(IntPtr self);

    [DllImport("LunaAHIC", EntryPoint = "luna_ahi_idevice_get_playback_bit_depth", CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte IdeviceGetPlaybackBitDepth(IntPtr self);

    [DllImport("LunaAHIC", EntryPoint = "luna_ahi_idevice_get_capture_num_channels", CallingConvention = CallingConvention.Cdecl)]
    internal static extern uint IdeviceGetCaptureNumChannels(IntPtr self);

    [DllImport("LunaAHIC", EntryPoint = "luna_ahi_idevice_get_capture_bit_depth", CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte IdeviceGetCaptureBitDepth(IntPtr self);

    [DllImport("LunaAHIC", EntryPoint = "luna_ahi_idevice_add_playback_data_callback", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IdeviceAddPlaybackDataCallback(IntPtr self, NativePlaybackDataCallback callback, IntPtr userdata, out ulong outHandle);

    [DllImport("LunaAHIC", EntryPoint = "luna_ahi_idevice_remove_playback_data_callback", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void IdeviceRemovePlaybackDataCallback(IntPtr self, ulong handle);

    [DllImport("LunaAHIC", EntryPoint = "luna_ahi_idevice_add_capture_data_callback", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IdeviceAddCaptureDataCallback(IntPtr self, NativeCaptureDataCallback callback, IntPtr userdata, out ulong outHandle);

    [DllImport("LunaAHIC", EntryPoint = "luna_ahi_idevice_remove_capture_data_callback", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void IdeviceRemoveCaptureDataCallback(IntPtr self, ulong handle);

}
